# data-preprocessor

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  update_handlers_docs.sh
app/: pipeline.py
app/processing/: processor.py
app/processing/handlers/: README.md  __init__.py  date.py  email.py  text.py  url.py
app/reading/: file.py  reader.py
app/utils/: cmd.py  common.py  config.py  logger.py
app/writing/: file.py  writer.py
configs/: config.yaml.example
docs_generator/: README.md  app.processing.handlers.rst  app.processing.rst  app.reading.rst  app.rst  app.writing.rst  conf.py  index.rst
docs_generator/_build/doctrees/: app.doctree  app.processing.doctree  app.processing.handlers.doctree  app.reading.doctree  app.writing.doctree  environment.pickle  index.doctree  main.doctree
docs_generator/_build/markdown/: app.md  app.processing.handlers.md  app.processing.md  app.reading.md  app.writing.md  index.md
